--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -19,6 +19,8 @@ GRUB_PLATFORMS="efi-64"
 FEATURES="distcc candy nodoc noinfo noman parallel-fetch parallel-install"
 CCACHE_DIR="/var/cache/ccache"
 DISTCC_HOSTS="192.168.31.191/24 172.27.66.154/20"
-EMERGE_DEFAULT_OPTS="--verbose --ask --jobs=3 --load-average=5"
+EMERGE_DEFAULT_OPTS="--noreplace --verbose --ask --jobs=3 --load-average=5"
 ACCEPT_LICENSE="*"
-USE="systemd dbus"
+USE="systemd dbus ffmpeg vaapi x264 x265 aac gstreamer mp3 opus theora"
+VIDEO_CARDS="intel"
+CPU_FLAGS_X86="aes avx avx2 avx512_bitalg avx512_vbmi2 avx512_vnni avx512_vp2intersect avx512_vpopcntdq avx512bw avx512cd avx512dq avx512f avx512ifma avx512vbmi avx512vl f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 ssse3 vpclmulqdq"
