new portage files

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,29 +1,17 @@
-# These settings were set by the catalyst build script that automatically
-# built this stage.
-# Please consult /usr/share/portage/config/make.conf.example for a more
-# detailed example.
-COMMON_FLAGS="-march=native -O2 -pipe"
+COMMON_FLAGS="-O2 -pipe -march=tigerlake -mabm -mno-kl -mno-sgx -mno-widekl -mshstk --param=l1-cache-line-size=64 --param=l1-cache-size=48 --param=l2-cache-size=8192"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-
-# NOTE: This stage was built with the bindist USE flag enabled
-
-# This sets the language of build output to English.
-# Please keep this setting intact when reporting bugs.
-LC_MESSAGES=pl_PL.UTF-8
-LINGUAS="pl en"
-L10N="pl en"
-GENTOO_MIRRORS="https://mirror.netcologne.de/gentoo/ https://ftp-stud.hs-esslingen.de/pub/Mirrors/gentoo/ https://ftp.vectranet.pl/gentoo/"
-MAKEOPTS="--jobs 6 --load-average 7"
-GRUB_PLATFORMS="efi-64"
-FEATURES="distcc candy nodoc noinfo noman parallel-fetch parallel-install"
-CACHE_DIR="/var/cache/ccache"
-DISTCC_HOSTS="192.168.31.191/24 172.27.66.154/20"
-EMERGE_DEFAULT_OPTS="--verbose --ask"
-INPUT_DEVICES="synaptics libinput"
+LANG="pl_PL.UTF8"
+LC_MESSAGES=pl_PL.UTF8
+MAKEOPTS="-j5"
+FEATURES="binpkg-multi-instance buildpkg candy nodoc noinfo noman parallel-install"
+EMERGE_DEFAULT_OPTS="--quiet --ask --verbose --quiet-build=y"
 ACCEPT_LICENSE="*"
-USE="systemd dbus ffmpeg vaapi x264 x265 aac gstreamer mp3 opus theora pulseaudio"
 VIDEO_CARDS="intel"
-CPU_FLAGS_X86="aes avx avx2 avx512_bitalg avx512_vbmi2 avx512_vnni avx512_vp2intersect avx512_vpopcntdq avx512bw avx512cd avx512dq avx512f avx512ifma avx512vbmi avx512vl f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 ssse3 vpclmulqdq"
+#USE="X bluetooth dbus gpl libplacebo libv4l opengl pulseaudio v4l vaapi wayland x265 zsh-completion"
+SECUREBOOT_SIGN_KEY="/usr/share/keyrings/gentoo_secure_boot.key"
+SECUREBOOT_SIGN_CERT="/usr/share/keyrings/gentoo_secure_boot.crt"
+L10N="pl"
+INPUT_DEVICES="libinput"
