--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -10,7 +10,8 @@ FEATURES="binpkg-multi-instance buildpkg candy nodoc noinfo noman parallel-insta
 EMERGE_DEFAULT_OPTS="--quiet --ask --verbose --quiet-build=y"
 ACCEPT_LICENSE="*"
 VIDEO_CARDS="intel"
-#USE="X bluetooth dbus gpl libplacebo libv4l opengl pulseaudio v4l vaapi wayland x265 zsh-completion"
+USE="" #X bluetooth dbus gpl libplacebo libv4l opengl pulseaudio v4l vaapi wayland x265 zsh-completion
+USE="${USE} networkmanager"
 SECUREBOOT_SIGN_KEY="/usr/share/keyrings/gentoo_secure_boot.key"
 SECUREBOOT_SIGN_CERT="/usr/share/keyrings/gentoo_secure_boot.crt"
 L10N="pl"
